[gd_scene load_steps=8 format=2]

[ext_resource path="res://menus/basicMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/interface/returnToNormalModeSelectWorld.gd" type="Script" id=2]
[ext_resource path="res://menus/util/CompletionBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/interface/NormalModeSelectDifficulty.gd" type="Script" id=4]
[ext_resource path="res://buttons/gameModeButtons/PrimaryButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://buttons/gameModeButtons/IntermediateButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://buttons/gameModeButtons/AdvancedButton.tscn" type="PackedScene" id=7]

[node name="World" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="CompletionBox" parent="PlayBoard" index="1" instance=ExtResource( 3 )]
margin_left = 18.0
margin_top = 29.0
margin_right = 300.0
margin_bottom = 79.0
rect_scale = Vector2( 2, 2 )

[node name="DifficultyDiv" type="HBoxContainer" parent="PlayBoard" index="2"]
margin_left = 15.0
margin_top = 146.883
margin_right = 598.0
margin_bottom = 426.883
rect_min_size = Vector2( 0, 280 )
custom_constants/separation = 29
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PrimaryButton" parent="PlayBoard/DifficultyDiv" index="0" instance=ExtResource( 5 )]
script = null

[node name="IntermediateButton" parent="PlayBoard/DifficultyDiv" index="1" instance=ExtResource( 6 )]
margin_left = 204.0
margin_right = 379.0
script = null

[node name="AdvancedButton" parent="PlayBoard/DifficultyDiv" index="2" instance=ExtResource( 7 )]
margin_left = 408.0
margin_right = 583.0
script = null

[node name="TopicName" type="Label" parent="PlayBoard" index="3"]
margin_left = 148.236
margin_top = 105.604
margin_right = 305.236
margin_bottom = 119.604
rect_scale = Vector2( 2, 2 )
size_flags_vertical = 0
text = "Insert World Name Here"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" parent="Header" index="0"]
margin_left = 383.757
margin_top = 21.3604
margin_right = 474.757
margin_bottom = 38.3604
text = "Normal Mode"

[node name="ColorRect" parent="Header/RichTextLabel" index="1"]
margin_left = -1.81379
margin_top = -0.680183
margin_right = -1.81378
margin_bottom = -0.680183

[node name="BackButton" parent="." index="3"]
script = ExtResource( 2 )
[connection signal="pressed" from="PlayBoard/DifficultyDiv/PrimaryButton" to="." method="_on_PrimaryButton_pressed"]
[connection signal="pressed" from="PlayBoard/DifficultyDiv/IntermediateButton" to="." method="_on_IntermediateButton_pressed"]
[connection signal="pressed" from="PlayBoard/DifficultyDiv/AdvancedButton" to="." method="_on_AdvancedButton_pressed"]
[connection signal="pressed" from="BackButton" to="BackButton" method="_on_BackButton_pressed"]
